--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,7 @@
 #Mon Sep 25 10:25:39 PDT 2017
 excludes=
+file.reference.mockito-all-1.9.5.jar=C:\\Users\\Frank\\Downloads\\mockito-all-1.9.5.jar
+file.reference.selenium-server-standalone-3.6.0.jar=C:\\Users\\Frank\\Downloads\\selenium-server-standalone-3.6.0.jar
 javac.deprecation=false
 build.test.results.dir=${build.dir}/test/results
 javac.external.vm=true
@@ -21,7 +23,7 @@ build.dir=build
 build.test.classes.dir=${build.dir}/test/classes
 platform.active=default_platform
 javac.compilerargs=
-main.class=
+main.class=br.edu.ufra.domain.BaseDAO
 dist.jar=${dist.dir}/junit.jar
 javac.test.processorpath=${javac.test.classpath}
 javadoc.use=true
@@ -50,7 +52,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 src.dir=src
 mkdist.disabled=false
 annotation.processing.enabled.in.editor=false
-javac.classpath=${file.reference.mysql-connector-java-5.1.13-bin.jar}\:${libs.junit_4.classpath}
+javac.classpath=\
+    ${file.reference.mysql-connector-java-5.1.13-bin.jar}:\
+    ${libs.junit_4.classpath}:\
+    ${file.reference.mockito-all-1.9.5.jar}:\
+    ${file.reference.selenium-server-standalone-3.6.0.jar}
 build.generated.sources.dir=${build.dir}/generated-sources
 javadoc.version=false
 javadoc.windowtitle=
